--- a/Javascript task 1/index.html
+++ b/Javascript task 1/index.html
@@ -74,8 +74,10 @@
                     <option value="none">Job Title</option>
                 </select>
                 <select name="office" id="addEmployeeOffice">
+                    <option value="none">Office</option>
                 </select>
                 <select name="department" id="addEmployeeDepartment">
+                    <option value="none">Department</option>
                 </select>
                 <input type="text" id="phoneNumber" name="phoneNumber" placeholder="PhoneNumber">
                 <input type="text" id="skypeID" name="skypeID" placeholder="Skype ID">
